# pdfnavigator-app

./: .gitignore  README.md  STARTUP.md  conftest.py  main.py  pdfnavigator.spec  pyproject.toml
PDFNavigator/core/: bookmark_writer.py  font_chapter_detector.py  toc_detector.py  toc_parser.py
PDFNavigator/ui/: editor_window.py  main_window.py  styles.py  widgets.py
pdfnavigator/core/: bookmark_writer.py  font_chapter_detector.py  pdf_handler.py  toc_detector.py  toc_parser.py
pdfnavigator/ui/: editor_window.py  main_window.py  widgets.py
pdfnavigator/utils/: config.py  helpers.py
tests/: conftest.py  test_bookmark_writer.py  test_config.py  test_editor_window.py  test_font_detector.py  test_helpers.py  test_main_window.py  test_pdf_handler.py  test_toc_detector.py  test_toc_parser.py  test_widgets.py
